header back now

--- a/nwc.html
+++ b/nwc.html
@@ -58,7 +58,7 @@
         <div class="row">
           <div class="col-lg-12">
               <div class="headerPics">
-            <img src="images/sunset_main.PNG" class="img-fluid" alt="Responsive image">
+            <img src="images/sunset_main.png" class="img-fluid" alt="Responsive image">
             <img src="images/Wildlife_Logo.jpg" class="main-logo" alt="logo">
           </div>
         </div>
