--- a/gallery.html
+++ b/gallery.html
@@ -69,7 +69,7 @@
               <script>
                  document.write('<a class="btn btn-primary btn-lg" onclick="window.history.back()" href="#">Go Back</a>');
               </script>
-        </div> -->
+        </div> 
 
         <!-- <div class="service-button"><a class="btn btn-primary btn-lg" href="#services">Services</a>
 
