header txt justifed

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <div class="service_container">
       <div class="row">
         <div class="col-sm-8">
-            <p>Whether you own 5 acres or 5,000 acres, Hunt Country Wildlife Management Services, LLC can help assist you with all of your wildlife management needs.  Our highly educated and motivated team of wildlife biologists, fisheries biologists, and environmental scientists can help develop, implement and maintain an integrated management plan that can unlock your property’s full potential.</p>
+            <p class="home-txt">Whether you own 5 acres or 5,000 acres, Hunt Country Wildlife Management Services, LLC can help assist you with all of your wildlife management needs.  Our highly educated and motivated team of wildlife biologists, fisheries biologists, and environmental scientists can help develop, implement and maintain an integrated management plan that can unlock your property’s full potential.</p>
      </div>
    </div>
  </div>
