--- a/contact.html
+++ b/contact.html
@@ -93,10 +93,10 @@
                 </address>
                 <address>
                   <abbr title="Phone">P:</abbr>
-                  (540) 974-2718
+                  (703) 328-7354
                   <br>
                   <abbr title="Email">E:</abbr>
-                  <a href="mailto:#">rvanhouten@wetlands.com</a>
+                  <a href="mailto:#">rvanhoutenjr@yahoo.com</a>
                 </address>
 
       </div>
