--- a/gallery.html
+++ b/gallery.html
@@ -69,7 +69,7 @@
               <script>
                  document.write('<a class="btn btn-primary btn-lg" onclick="window.history.back()" href="#">Go Back</a>');
               </script>
-        </div> 
+        </div>
 
         <!-- <div class="service-button"><a class="btn btn-primary btn-lg" href="#services">Services</a>
 
@@ -112,7 +112,13 @@
 
 <div class="container">
 
- <h1 class="my-4 text-center text-lg-left">Click the images below to see larger version.</h1>
+    <div class="row">
+      <div class="col-sm-8">
+          <p class="home-txt">Click the images below to see larger version.</p>
+
+  </div>
+  </div>
+
 
  <div class="row text-center text-lg-left">
 
