email address link workin

--- a/contact.html
+++ b/contact.html
@@ -96,7 +96,7 @@
                   (703) 328-7354
                   <br>
                   <abbr title="Email">E:</abbr>
-                  <a href="mailto:#">rvanhoutenjr@yahoo.com</a>
+                  <a href="mailto:rvanhoutenjr@yahoo.com">rvanhoutenjr@yahoo.com</a>
                 </address>
 
       </div>
